# cloud-image-extractor

./: .flaskenv  .gitignore  README.md  daemon.sh  exiftool.ipynb  pyproject.toml
cloud_image_extractor/: __init__.py  config.py  controller.py  routes.py
cloud_image_extractor/template/: file_upload_to_s3.html  index.html
cloud_image_extractor/utils/: helpers.py
doc/: exiftool.ipynb  install.sh
tmp/: README.md
