[tool.poetry]
name = "cloud-image-extractor"
version = "0.1.0"
description = ""
authors = ["johnsonpeixoto <johnson.peixotoo@gmail.com>"]
readme = "README.md"
packages = [{include = "cloud_image_extractor"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
python-dotenv = "^0.21.0"
boto3 = "^1.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
